--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"server": "tsx src/server.ts"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
@@ -24,8 +25,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@types/node": "^22.13.11",
 		"boardgame.io": "^0.50.2",
 		"nanoid": "^5.0.7",
+		"node-persist": "^4.0.4",
 		"unique-names-generator": "^4.7.1"
 	}
 }
